@@ -1,63 +1,57 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
   <groupId>org.greeneyed</groupId>
   <artifactId>epl_librarian</artifactId>
-  <version>0.0.43-SNAPSHOT</version>
+  <version>1.17.0-SNAPSHOT</version>
   <packaging>jar</packaging>
-
   <name>EPL Librarian</name>
   <description>EPL Librarian</description>
-
   <scm>
     <developerConnection>scm:git:https://github.com/Verdoso/${project.artifactId}</developerConnection>
     <tag>HEAD</tag>
   </scm>
-
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-dependencies</artifactId>
-        <version>2.4.13</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>2.7.2</version>
+    <relativePath /> <!-- lookup parent from repository -->
+  </parent>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <maven.compiler.source>8</maven.compiler.source>
-    <maven.compiler.target>8</maven.compiler.target>
-    <java-version>8</java-version>
+    <m2e.apt.activation>jdt_apt</m2e.apt.activation>
+    <java.version>17</java.version>
     <javax.inject.version>1</javax.inject.version>
-    <lombok.version>1.18.20</lombok.version>
+    <maven-scm-plugin.version>1.9.5</maven-scm-plugin.version>
+    <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
     <commons-text.version>1.4</commons-text.version>
     <commons-io.version>2.7</commons-io.version>
     <org.mapstruct.version>1.4.1.Final</org.mapstruct.version>
-    <m2e.apt.activation>jdt_apt</m2e.apt.activation>
     <cqengine.version>3.5.0</cqengine.version>
+    <jaxb-java-time-adapters.version>1.1.3</jaxb-java-time-adapters.version>
+    <podam.version>7.2.0.RELEASE</podam.version>
+    <formatter-maven-plugin.version>2.20.0</formatter-maven-plugin.version>
+    <maven-enforcer-plugin.version>3.1.0</maven-enforcer-plugin.version>
+    <dependency-check-maven.version>7.1.1</dependency-check-maven.version>
+    <spotbugs-maven-plugin.version>4.7.1.0</spotbugs-maven-plugin.version>
+
+    <frontend-maven-plugin.version>1.12.1</frontend-maven-plugin.version>
+    <node.version>v12.14.1</node.version>
+    <npm.version>8.3.0</npm.version>
+    <springdoc-openapi.version>1.6.9</springdoc-openapi.version>
+    <npm.directory>src/main/frontend</npm.directory>
+
     <sonar-projectKey>Verdoso_epl_librarian</sonar-projectKey>
     <sonar-organization>verdoso</sonar-organization>
     <sonar-host.url>https://sonarcloud.io</sonar-host.url>
     <code.coverage.exclusions>
       **/org/greeneyed/epl/librarian/Application.java
     </code.coverage.exclusions>
-    <log4j2.version>2.17.1</log4j2.version>
   </properties>
 
   <dependencies>
-
-    <!-- TEMPORAL DURANTE LA MIGRACION A SPRING BOOT 2 -->
-    <!-- <dependency> -->
-    <!-- <groupId>org.springframework.boot</groupId> -->
-    <!-- <artifactId>spring-boot-properties-migrator</artifactId> -->
-    <!-- <scope>runtime</scope> -->
-    <!-- </dependency> -->
-
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -88,6 +82,11 @@
     </dependency>
 
     <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-web</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-log4j2</artifactId>
     </dependency>
@@ -95,30 +94,12 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-actuator</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-api</artifactId>
-      <version>${log4j2.version}</version><!--$NO-MVN-MAN-VER$-->
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-slf4j-impl</artifactId>
-      <version>${log4j2.version}</version><!--$NO-MVN-MAN-VER$-->
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-core</artifactId>
-      <version>${log4j2.version}</version><!--$NO-MVN-MAN-VER$-->
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-web</artifactId>
-      <version>${log4j2.version}</version><!--$NO-MVN-MAN-VER$-->
+      <exclusions>
+        <exclusion>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <dependency>
@@ -150,22 +131,6 @@
       <version>${org.mapstruct.version}</version>
     </dependency>
 
-    <!-- FrontEnd -->
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-thymeleaf</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>nz.net.ultraq.thymeleaf</groupId>
-      <artifactId>thymeleaf-layout-dialect</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>com.fasterxml.jackson.datatype</groupId>
-      <artifactId>jackson-datatype-jsr310</artifactId>
-    </dependency>
-
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
@@ -188,26 +153,88 @@
       <artifactId>sqlite-jdbc</artifactId>
     </dependency>
 
+    <!-- FrontEnd -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-thymeleaf</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>nz.net.ultraq.thymeleaf</groupId>
+      <artifactId>thymeleaf-layout-dialect</artifactId>
+    </dependency>
+
     <!-- Testing -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.ow2.asm</groupId>
+          <artifactId>asm</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-params</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>uk.co.jemos.podam</groupId>
+      <artifactId>podam</artifactId>
+      <version>${podam.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
+
 
   <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
+        <artifactId>maven-install-plugin</artifactId>
         <configuration>
-          <!-- <release>${java-version}</release> -->
-          <source>${java-version}</source>
-          <target>${java-version}</target>
-          <!-- <compilerArgument>-Xlint:all,-deprecation,-unchecked,-processing,-requires-transitive-automatic</compilerArgument> -->
+          <!-- This is an app, so we don't want to install it in the local Maven repository -->
+          <skip>true</skip>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>net.revelc.code.formatter</groupId>
+        <artifactId>formatter-maven-plugin</artifactId>
+        <version>${formatter-maven-plugin.version}</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>format</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <configFile>${project.basedir}/src/main/resources/formatter-maven-plugin/eclipse-formatter.xml</configFile>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <fork>true</fork>
+          <compilerArgs>
+            <arg>-Xlint:all,-deprecation,-unchecked,-processing,-requires-transitive-automatic</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
+          </compilerArgs>
           <testCompilerArgument>-Xlint:none</testCompilerArgument>
           <showWarnings>true</showWarnings>
           <showDeprecation>true</showDeprecation>
@@ -224,18 +251,10 @@
             </path>
           </annotationProcessorPaths>
         </configuration>
-        <dependencies>
-          <dependency>
-            <groupId>org.ow2.asm</groupId>
-            <artifactId>asm</artifactId>
-            <version>6.1.1</version>
-          </dependency>
-        </dependencies>
       </plugin>
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
-        <version>2.3.1.RELEASE</version>
         <executions>
           <execution>
             <goals>
@@ -263,7 +282,6 @@
       </plugin>
       <plugin>
         <artifactId>maven-resources-plugin</artifactId>
-        <version>3.1.0</version>
         <executions>
           <execution>
             <id>copy-resources</id>
@@ -286,7 +304,6 @@
       </plugin>
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
-        <version>3.3.0</version>
         <executions>
           <execution>
             <id>make-assembly</id>
@@ -303,35 +320,30 @@
           </execution>
         </executions>
       </plugin>
-      <!-- Deshabilitamos el deploy, los fuentes y el javadoc por que no queremos que los suba automaticamente a ningún repositorio -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-deploy-plugin</artifactId>
-        <version>2.8.2</version>
+        <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <skip>true</skip>
+          <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
         </configuration>
       </plugin>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-source-plugin</artifactId>
-        <version>3.2.1</version>
+        <artifactId>maven-failsafe-plugin</artifactId>
         <configuration>
-          <skipSource>true</skipSource>
+          <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
         </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <version>3.2.0</version>
-        <configuration>
-          <skip>true</skip>
-        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
         <groupId>pl.project13.maven</groupId>
         <artifactId>git-commit-id-plugin</artifactId>
-        <version>4.0.1</version>
         <executions>
           <execution>
             <id>get-the-git-infos</id>
@@ -349,22 +361,46 @@
         <configuration>
           <excludeProperties>git.build.user.*,git.commit.user.*,git.remote.*,git.closest.*,git.commit.id.describe*</excludeProperties>
           <generateGitPropertiesFile>true</generateGitPropertiesFile>
+          <offline>true</offline>
         </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-scm-plugin</artifactId>
-        <version>1.9.5</version>
+        <version>${maven-scm-plugin.version}</version>
         <configuration>
           <tag>v${project.version}</tag>
         </configuration>
       </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
-        <version>2.5.3</version>
+        <version>${maven-release-plugin.version}</version>
         <configuration>
           <tagNameFormat>v@{project.version}</tagNameFormat>
+        </configuration>
+      </plugin>
+      <!-- Deshabilitamos el deploy, los fuentes y el javadoc por que no queremos que los suba automaticamente a ningún repositorio -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <configuration>
+          <skipSource>true</skipSource>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <configuration>
+          <skip>true</skip>
         </configuration>
       </plugin>
     </plugins>
@@ -372,15 +408,87 @@
 
   <profiles>
     <profile>
+      <id>code-quality</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-enforcer-plugin</artifactId>
+            <version>${maven-enforcer-plugin.version}</version>
+            <configuration>
+              <rules>
+                <banDuplicatePomDependencyVersions />
+                <requireJavaVersion>
+                  <version>17</version>
+                </requireJavaVersion>
+                <bannedDependencies>
+                  <excludes>
+                    <exclude>junit:junit</exclude>
+                    <exclude>junit:junit-dep</exclude>
+                  </excludes>
+                </bannedDependencies>
+                <dependencyConvergence />
+              </rules>
+              <failOnError>false</failOnError>
+            </configuration>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>enforce</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+
+          <plugin>
+            <groupId>org.owasp</groupId>
+            <artifactId>dependency-check-maven</artifactId>
+            <version>${dependency-check-maven.version}</version>
+            <configuration>
+              <suppressionFiles>
+                <suppressionFile>${project.basedir}/src/main/resources/dependency-check-maven/owasp-suppressions.xml</suppressionFile>
+              </suppressionFiles>
+              <assemblyAnalyzerEnabled>false</assemblyAnalyzerEnabled>
+              <failOnError>false</failOnError>
+            </configuration>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>check</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>com.github.spotbugs</groupId>
+            <artifactId>spotbugs-maven-plugin</artifactId>
+            <version>${spotbugs-maven-plugin.version}</version>
+            <configuration>
+              <excludeFilterFile>${project.basedir}/src/main/resources/spotbugs-maven-plugin/spotbugs-security-exclude.xml</excludeFilterFile>
+              <failOnError>false</failOnError>
+            </configuration>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>check</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
       <id>deployment</id>
       <build>
         <plugins>
           <plugin>
             <groupId>com.github.eirslett</groupId>
             <artifactId>frontend-maven-plugin</artifactId>
-            <version>1.6</version>
+            <version>${frontend-maven-plugin.version}</version>
             <configuration>
               <workingDirectory>src/main/frontend</workingDirectory>
+              <installDirectory>${npm.directory}</installDirectory>
             </configuration>
             <executions>
               <execution>
@@ -389,8 +497,8 @@
                   <goal>install-node-and-npm</goal>
                 </goals>
                 <configuration>
-                  <nodeVersion>v12.14.1</nodeVersion>
-                  <npmVersion>8.3.0</npmVersion>
+                  <nodeVersion>${node.version}</nodeVersion>
+                  <npmVersion>${npm.version}</npmVersion>
                 </configuration>
               </execution>
               <execution>
@@ -442,4 +550,5 @@
       </build>
     </profile>
   </profiles>
+
 </project>
